--- a/gpu-scheduler-check.yaml
+++ b/gpu-scheduler-check.yaml
@@ -1,26 +1,36 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
   name: gpu-scheduler-check
   labels:
     app: gpu-scheduler-check
 spec:
-  containers:
-  - name: gpu-check
-    image: bash
-    command: ["bash"]
-    args:
-    - -c
-    - |
-      while true; do
-        echo "Node Name: $NODE_NAME"
-        echo "CUDA_VISIBLE_DEVICES: $CUDA_VISIBLE_DEVICES"
-        echo "---"
-        sleep 5
-      done
-    env:
-    - name: NODE_NAME
-      valueFrom:
-        fieldRef:
-          fieldPath: spec.nodeName
-  restartPolicy: Always
+  serviceName: gpu-scheduler-check
+  replicas: 5
+  selector:
+    matchLabels:
+      app: gpu-scheduler-check
+  template:
+    metadata:
+      labels:
+        app: gpu-scheduler-check
+    spec:
+      containers:
+      - name: gpu-check
+        image: bash
+        command: ["bash"]
+        args:
+        - -c
+        - |
+          while true; do
+            echo "Node Name: $NODE_NAME"
+            echo "CUDA_VISIBLE_DEVICES: $CUDA_VISIBLE_DEVICES"
+            echo "---"
+            sleep 5
+          done
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+      restartPolicy: Always
