Draft of scheduler

--- a/gpu-scheduler-check.yaml
+++ b/gpu-scheduler-check.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: gpu-scheduler-check
     spec:
+      schedulerName: gpu-scheduler
       containers:
       - name: gpu-check
         image: bash
