--- a/gpu-scheduler-check.yaml
+++ b/gpu-scheduler-check.yaml
@@ -14,6 +14,13 @@ spec:
     metadata:
       labels:
         app: gpu-scheduler-check
+      annotations:
+        gpu-scheduling-map: |
+          0=node1:0,1
+          1=node2:2
+          2=node3:0,1,2
+          3=node4:3
+          4=node4:3
     spec:
       schedulerName: gpu-scheduler
       containers:
