--- a/gpu-scheduler.yaml
+++ b/gpu-scheduler.yaml
@@ -1,21 +1,30 @@
 apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: gpu-scheduling-map
-  namespace: kube-system
-data:
-  gpu-scheduling-map: |
-    0=node1:0,1
-    1=node2:2
-    2=node3:0,1,2
-    3=node4:3
-    4=node4:3
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: gpu-scheduler
   namespace: kube-system
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: gpu-scheduler
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch", "patch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: gpu-scheduler-patch-pods
+subjects:
+- kind: ServiceAccount
+  name: gpu-scheduler
+  namespace: kube-system
+roleRef:
+  kind: ClusterRole
+  name: gpu-scheduler
+  apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
