--- a/gpu-scheduler/Dockerfile
+++ b/gpu-scheduler/Dockerfile
@@ -4,4 +4,4 @@ ADD . /app
 WORKDIR /app
 ENV UV_COMPILE_BYTECODE=1
 RUN uv sync --locked
-CMD ["uv", "run", "main.py"]
+CMD ["uv", "run", "scheduler.py"]
